force-app/main/default/objects/EmailNotificationSetting__mdt/EmailNotificationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Email Notification Setting</description>
    <label>Email Notification Setting</label>
    <pluralLabel>Email Notification Settings</pluralLabel>
</CustomObject>