force-app/main/default/objects/EmailNotificationSetting__mdt/fields/BCCEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>BCCEmailAddress__c</fullName>
    <description
  >Default BCC email address need to include for a mail, muliple addres can be include by seperated by semi colon</description>
    <inlineHelpText
  >Default BCC email address need to include for a mail, muliple addres can be include by seperated by semi colon</inlineHelpText>
    <label>BCC Email Address</label>
    <type>TextArea</type>
</CustomField>