force-app/main/default/objects/EmailNotificationSetting__mdt/fields/CCEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>CCEmailAddress__c</fullName>
    <description
  >Default CC email address need to include for a mail, muliple addres can be include by seperated by semi colon</description>
    <inlineHelpText
  >Default CC email address need to include for a mail, muliple addres can be include by seperated by semi colon</inlineHelpText>
    <label>CC Email Address</label>
    <type>TextArea</type>
</CustomField>