force-app/main/default/objects/EmailNotificationSetting__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Email Notification</description>
    <inlineHelpText>Disable Email Notification</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>