force-app/main/default/objects/EmailNotificationSetting__mdt/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <description
  >Display Name for outgoing email, Only allowed when org wide email address are not used</description>
    <inlineHelpText
  >Display Name for outgoing email, Only allowed when org wide email address are not used</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>