force-app/main/default/objects/EmailNotificationSetting__mdt/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <description>Unique Email Template Name of salesforce metadata</description>
    <inlineHelpText>Unique Email Template Name of salesforce metadata</inlineHelpText>
    <label>Email Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>