force-app/main/default/objects/EmailNotificationSetting__mdt/fields/OrgWideName__c.field-meta.xml
<CustomField>
    <fullName>OrgWideName__c</fullName>
    <description>Organization-Wide Email Addresses Name</description>
    <inlineHelpText>Organization-Wide Email Addresses Name</inlineHelpText>
    <label>OWA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>