force-app/main/default/objects/EmailNotificationSetting__mdt/fields/ReplyToAddress__c.field-meta.xml
<CustomField>
    <fullName>ReplyToAddress__c</fullName>
    <description>Default reply To Address need to include</description>
    <inlineHelpText>Default relpay To Address need to include</inlineHelpText>
    <label>Replay To Address</label>
    <type>TextArea</type>
</CustomField>