force-app/main/default/objects/EmailNotificationSetting__mdt/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <description>Default To Address need to include</description>
    <inlineHelpText>Default To Address need to include</inlineHelpText>
    <label>To Address</label>
    <type>TextArea</type>
</CustomField>