force-app/main/default/objects/EmailNotificationSetting__mdt/fields/TraceEmailActivity__c.field-meta.xml
<CustomField>
    <fullName>TraceEmailActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Enable Email activity based on the whatId, Track Activities need to enable in object level to use the feature</description>
    <inlineHelpText
  >Enable Email activity based on the whatId, Track Activities need to enable in object level to use the feature</inlineHelpText>
    <label>Trace Email Activity</label>
    <type>Checkbox</type>
</CustomField>